@@ -1,6 +1,5 @@
-
 /*
- * Copyright (C) 2019-2022 LitterBox contributors
+ * Copyright (C) 2019-2024 LitterBox contributors
  *
  * This file is part of LitterBox.
  *
@@ -42,7 +41,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.google.common.truth.Truth.assertThat;
@@ -129,7 +127,7 @@ class AstNodeUtilTest implements JsonTest {
                 .flatMap(Collection::stream)
                 .map(ProcedureInfo::getName)
                 .map(name -> AstNodeUtil.replaceProcedureParams(name, replacement))
-                .collect(Collectors.toList());
+                .toList();
 
         final String nameWithReplacements = String.format("BlockWithInputs %s %s", replacement, replacement).trim();
         assertThat(procedureNames).containsExactly("BlockNoInputs", nameWithReplacements);
